deployment/deploy.app-emr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superpower-app
  namespace: emr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superpower-app
  template:
    metadata:
      labels:
        app: superpower-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: eks.amazonaws.com/nodegroup
                    operator: In
                    values:
                      - arm-workers
      containers:
        - name: superpower-app
          image: __AWS_ECR_URL__/superpower-app:__VERSION__
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: superpower-app
  namespace: emr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: app-emr.superpower-staging.com
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 'arn:aws:acm:us-east-1:554179259394:certificate/dc505934-95e6-49a0-b9fd-df2092b3c050'
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: '443'
spec:
  selector:
    app: superpower-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
  type: LoadBalancer
