deployment/deploy.story.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story
  namespace: superpower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: story
  template:
    metadata:
      labels:
        app: story
    spec:
      containers:
        - name: story
          image: __AWS_ECR_URL__/__SERVICE__:__VERSION__
          ports:
            - containerPort: 6006 # Updated port for Storybook
          command: ['yarn', 'storybook'] # Override the default command to run Storybook

---
apiVersion: v1
kind: Service
metadata:
  name: story
  namespace: superpower
  annotations:
    external-dns.alpha.kubernetes.io/hostname: story.superpower-staging.com
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 'arn:aws:acm:us-east-1:554179259394:certificate/dc505934-95e6-49a0-b9fd-df2092b3c050'
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: '443'
spec:
  selector:
    app: story
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6006
    - name: https
      protocol: TCP
      port: 443
      targetPort: 6006
  type: LoadBalancer
