deployment/deploy.app.feature.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superpower-app
  namespace: superpower-feature-__FEATURE_NAME__
  labels:
    app: superpower-app
    feature: __FEATURE_NAME__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superpower-app
  template:
    metadata:
      labels:
        app: superpower-app
        feature: __FEATURE_NAME__
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: workload
                operator: In
                values: 
                  - app-arm
      containers:
        - name: superpower-app
          image: __AWS_ECR_URL__/superpower-app:__VERSION__
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "0.25"
              memory: 256Mi
            limits:
              cpu: "0.5"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: superpower-app
  namespace: superpower-feature-__FEATURE_NAME__
  labels:
    app: superpower-app
    feature: __FEATURE_NAME__
spec:
  selector:
    app: superpower-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superpower-app-ingress
  namespace: superpower-feature-__FEATURE_NAME__
  labels:
    app: superpower-app
    feature: __FEATURE_NAME__
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx-internal
  rules:
  - host: app-__FEATURE_NAME__.superpower-staging.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superpower-app
            port:
              number: 80
