deployment/deploy.app.stg-scheduling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superpower-app
  namespace: stg-scheduling
spec:
  replicas: 2
  selector:
    matchLabels:
      app: superpower-app
  template:
    metadata:
      labels:
        app: superpower-app
        environment: stg-scheduling
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - app-arm
      containers:
        - name: superpower-app
          image: __AWS_ECR_URL__/superpower-app:__VERSION__
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: superpower-app
  namespace: stg-scheduling
spec:
  selector:
    app: superpower-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superpower-app-ingress
  namespace: stg-scheduling
  annotations:
    kubernetes.io/ingress.class: kong-public
spec:
  ingressClassName: kong-public
  rules:
    - host: app-scheduling.superpower-staging.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superpower-app
                port:
                  number: 80
